Working on creating links to subpages from the welcome screen.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<header id="header">
 						<h1>JD Holwick</h1>
 						<p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++, SQL, Java, Kotlin, Swift</p>
+						<p><A HREF = "http://www.google.com/">Bio</A>  &bull;  Contact  &bull;  Experience  &bull;  Projects  &bull;  Resume</p>
 						<nav>
 							<ul>
 								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
