--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
 					<header id="header">
 						<h1>JD Holwick</h1>
 						<p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++, SQL, Java, Kotlin, Swift</p>
-						<p><A HREF = "http://www.google.com/">Bio</A>  &bull;  Contact  &bull;  Experience  &bull;  Projects  &bull;  Resume</p>
+						<p><a href = "http://www.google.com/">Bio</a>  &bull;  Contact  &bull;  Experience  &bull;  Projects  &bull;  Resume</p>
 						<nav>
 							<ul>
+								<!--Probably don't need these-->
 								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+
+								<!--"_blank" makes the link open in a new tab-->
+								<li><a href="https://github.com/jdholwick" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+
+								<li><a href="mailto: jdholwick@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
