--- a/index.html
+++ b/index.html
@@ -5,55 +5,61 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>JD Holwick - Professional E-Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-noscript.css" />
-		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body class="loading">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
+<head>
+    <title>JD Holwick - Professional E-Portfolio</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <!--[if lte IE 8]>
+    <script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/skel.min.js"></script>
+    <script src="js/init.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style-wide.css"/>
+        <link rel="stylesheet" href="css/style-noscript.css"/>
+    </noscript>
+    <!--[if lte IE 9]>
+    <link rel="stylesheet" href="css/ie/v9.css"/><![endif]-->
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
+</head>
+<body class="loading">
+<div id="wrapper">
+    <div id="bg"></div>
+    <div id="overlay"></div>
+    <div id="main">
 
-				<!-- Header -->
-					<header id="header">
-						<h1>JD Holwick</h1>
-						<p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++, SQL, Java, Kotlin, Swift</p>
-						<p><a href = "http://www.google.com/">Bio</a>  &bull;  Contact  &bull;  Experience  &bull;  Projects  &bull;  Resume</p>
-						<nav>
-							<ul>
-								<!--Probably don't need these-->
-								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+        <!-- Header -->
+        <header id="header">
+            <h1>JD Holwick</h1>
+            <p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++,
+                SQL, Java, Kotlin, Swift</p>
+            <p><a href="Pages/Bio.html">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull; Resume</p>
+            <nav>
+                <ul>
+                    <!--Probably don't need these-->
+                    <!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 
-								<!--"_blank" makes the link open in a new tab-->
-								<li><a href="https://github.com/jdholwick" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+                    <!--"_blank" makes the link open in a new tab-->
+                    <li><a href="https://github.com/jdholwick" target="_blank" class="icon fa-github"><span
+                            class="label">Github</span></a></li>
 
-								<li><a href="mailto: jdholwick@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							</ul>
-						</nav>
-					</header>
+                    <li><a href="mailto: jdholwick@gmail.com" class="icon fa-envelope-o"><span
+                            class="label">Email</span></a></li>
+                </ul>
+            </nav>
+        </header>
 
-				<!-- Footer -->
-					<footer id="footer">
-<!--						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>-->
-					</footer>
-				
-			</div>
-		</div>
-	</body>
+        <!-- Footer -->
+        <footer id="footer">
+            <!--<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>-->
+        </footer>
+
+    </div>
+</div>
+</body>
 </html>
