--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>JD Holwick</h1>
             <p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++,
                 SQL, Java, Kotlin, Swift</p>
-            <p><a href="Pages/Bio.html">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull; Resume</p>
+            <p><a href="Pages/Bio.html" target="_blank">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull; Resume</p>
             <nav>
                 <ul>
                     <!--Probably don't need these-->
