Bio page is mostly written. Resume added. Both have links from welcome page. Also, made minor grammar and writing modifications on welcome page.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <!-- Header -->
         <header id="header">
             <h1>JD Holwick</h1>
-            <p>Computer Science B.S. Degree from University of Montana &nbsp;&bull;&nbsp; <br>Languages: Python, C/C++,
+            <p>Computer Science B.S. Degree from The University of Montana &nbsp;&bull;&nbsp; <br>Programming Languages: Python, C/C++,
                 SQL, Java, Kotlin, Swift</p>
-            <p><a href="Pages/Bio.html" target="_blank">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull; Resume</p>
+            <p><a href="Pages/Bio.html" target="_blank">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull;
+                <a href="Pages/Resume.pdf" target="_blank">Resume</a></p>
             <nav>
                 <ul>
                     <!--Probably don't need these-->
