I have added all pages but only "Bio.html" is functional. Also, I have made a nice-looking and workable navigation menu at the bottom of the "Bio" page. This and other features will be on the others soon, but I want to make sure everything is working right before I copy the code to the other pages.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>JD Holwick</h1>
             <p>Computer Science B.S. Degree from The University of Montana &nbsp;&bull;&nbsp; <br>Programming Languages: Python, C/C++,
                 SQL, Java, Kotlin, Swift</p>
-            <p><a href="Pages/Bio.html" target="_blank">Bio</a> &bull; Contact &bull; Experience &bull; Projects &bull;
+            <p><a href="Pages/Bio.html">Bio</a> &bull; <a href="Pages/Contact.html">Contact</a> &bull; <a href="Pages/Experience.html">Experience</a> &bull; <a href="Pages/Projects.html">Projects</a> &bull;
                 <a href="Pages/Resume.pdf" target="_blank">Resume</a></p>
             <nav>
                 <ul>
