"Projects.html" is a now a functional draft -- nearly complete.

--- a/Pages/Projects.html
+++ b/Pages/Projects.html
@@ -7,5 +7,52 @@
 </head>
 <body>
 
+<h1>List of Selected Projects</h1>
+
+<h2>D3 Visualizations:</h2>
+
+<ul>
+    <li><a href="https://jdholwick.github.io/Scatter_Plot_and_Hist_of_Bad_Driving_vs_Premiums/" target="_blank"> Scatter
+        Plot & Histogram Project</a></li>
+    <li><a href="https://jdholwick.github.io/Raster_Plot/" target="_blank">Raster Project</a></li>
+    <li><a href="https://jdholwick.github.io/Data_Visualization_Projects/Polis/polis.html" target="_blank">Polis
+        Project</a></li>
+    <li><a href="https://jdholwick.github.io/Data_Visualization_Projects/Network/network_map.html" target="_blank">Network
+        Project</a> (IMPORTANT NOTE: I suggest viewing in full-screen mode. If you choose not to view in full-screen
+        mode, you may want to zoom to 80% or 90% to view page correctly.)
+    </li>
+</ul>
+
+<h2>Android/Kotlin Applications:</h2>
+<ul>
+    <li><a href="https://github.com/jdholwick/tiptime" target="_blank">Tip Calculator App</a> (Made via tutorials with
+        my own minimal customizations.)
+    </li>
+    <li><a href="https://github.com/jdholwick/affirmations" target="_blank">Affirmations App</a> (Made via tutorials
+        with my own minimal customizations.)
+    </li>
+</ul>
+
+<h2>Java Projects:</h2>
+<ul>
+    <li><a href="https://github.com/jdholwick/JavaFX-WordSearch-Project" target="_blank">Word Search Web App</a>
+        (JavaFX)
+    </li>
+</ul>
+
+<footer>
+    <div class="footer-bottom">
+        <ul class="footer-menu">
+            <li><a href="../index.html">Main</a></li>
+            <li><a href="Bio.html">Bio</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Experience.html">Experience</a></li>
+            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="Resume.pdf" target="_blank">Resume</a></li>
+        </ul>
+    </div>
+</footer>
+
 </body>
+
 </html>
