--- a/Pages/Projects.html
+++ b/Pages/Projects.html
@@ -44,9 +44,8 @@
     <div class="footer-bottom">
         <ul class="footer-menu">
             <li><a href="../index.html">Main</a></li>
-            <li><a href="Bio.html">Bio</a></li>
+            <li><a href="Bio_Experience.html">Bio</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Experience.html">Experience</a></li>
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="Resume.pdf" target="_blank">Resume</a></li>
         </ul>
