--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
         <!-- Header -->
         <header id="header">
             <h1>JD Holwick</h1>
-            <p>Computer Science B.S. Degree from The University of Montana &nbsp;&bull;&nbsp; <br>Programming Languages: Python, C/C++,
+            <p>Computer Science B.S. Degree from The University of Montana &nbsp;&bull;&nbsp; <br>Programming Languages:
+                Python, C/C++,
                 SQL, Java, Kotlin, Swift</p>
-            <p><a href="Pages/Bio.html">Bio</a> &bull; <a href="Pages/Contact.html">Contact</a> &bull; <a href="Pages/Experience.html">Experience</a> &bull; <a href="Pages/Projects.html">Projects</a> &bull;
-                <a href="Pages/Resume.pdf" target="_blank">Resume</a></p>
+            <p><a href="Pages/Bio_Experience.html">Bio & Experience</a> &bull; <a
+                    href="Pages/Projects.html">Projects</a> &bull; <a href="Pages/Contact.html">Contact</a> &bull; <a
+                    href="Pages/Resume.pdf" target="_blank">Resume</a></p>
             <nav>
                 <ul>
                     <!--Probably don't need these-->
