All pages now fully functional. This is a first draft of my e-portfolio.

--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../css/style-childpages.css"/>
 </head>
+
 <body>
+<h1>Contact Information</h1>
+
+<h2>Personal Contact Information:</h2>
+Email: jdholwick@gmail.com
+
+<h2>Work Contact Information:</h2>
+Email: jholwick@edulog.com <br>
+Phone: 1-800-288-2141 x3117 <br>
+Edulog Address: 3000 Palmer Street, Missoula, MT 59808
+
+
+<footer>
+    <div class="footer-bottom">
+        <ul class="footer-menu">
+            <li><a href="../index.html">Main</a> | </li>
+            <li><a href="Bio_Experience.html">Bio & Experience</a> | </li>
+            <li><a href="Projects.html">Projects</a> | </li>
+            <li><a href="Contact.html">Contact</a> | </li>
+            <li><a href="Resume.pdf" target="_blank">Resume</a></li>
+        </ul>
+    </div>
+</footer>
 
 </body>
+
 </html>
