--- a/Pages/Projects.html
+++ b/Pages/Projects.html
@@ -43,10 +43,10 @@
 <footer>
     <div class="footer-bottom">
         <ul class="footer-menu">
-            <li><a href="../index.html">Main</a></li>
-            <li><a href="Bio_Experience.html">Bio</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="../index.html">Main</a> | </li>
+            <li><a href="Bio_Experience.html">Bio & Experience</a> | </li>
+            <li><a href="Projects.html">Projects</a> | </li>
+            <li><a href="Contact.html">Contact</a> | </li>
             <li><a href="Resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </div>
