--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
         <header id="header">
             <h1>JD Holwick</h1>
             <p>Computer Science B.S. Degree from The University of Montana &nbsp;&bull;&nbsp; <br>Programming Languages:
-                Python, C/C++,
-                SQL, Java, Kotlin, Swift</p>
+                Python, C/C++, R, SQL, Java, Kotlin, Swift</p>
             <p><a href="Pages/Bio_Experience.html">Bio & Experience</a> &bull; <a
                     href="Pages/Projects.html">Projects</a> &bull; <a href="Pages/Contact.html">Contact</a> &bull; <a
                     href="Pages/Resume.pdf" target="_blank">Resume</a></p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <nav>
                 <ul>
                     <!--Probably don't need these-->
@@ -47,12 +52,12 @@
                     <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                     <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 
-                    <!--"_blank" makes the link open in a new tab-->
-                    <li><a href="https://github.com/jdholwick" target="_blank" class="icon fa-github"><span
+                    <!--The following didn't jive well with my welcome page.-->
+                    <!--<li><a href="https://github.com/jdholwick" target="_blank" class="icon fa-github"><span
                             class="label">Github</span></a></li>
 
                     <li><a href="mailto: jdholwick@gmail.com" class="icon fa-envelope-o"><span
-                            class="label">Email</span></a></li>
+                            class="label">Email</span></a></li>-->
                 </ul>
             </nav>
         </header>
