One small change: The Tip Time App I had to redo, so I deleted the old repository and made a new one with a slightly different name. The code in "Projects.html" will now link to the new repository.

--- a/Pages/Projects.html
+++ b/Pages/Projects.html
@@ -25,7 +25,7 @@
 
 <h2>Android/Kotlin Applications:</h2>
 <ul>
-    <li><a href="https://github.com/jdholwick/tiptime" target="_blank">Tip Calculator App</a> (Made via tutorials with
+    <li><a href="https://github.com/jdholwick/tiptime_app" target="_blank">Tip Calculator App</a> (Made via tutorials with
         my own minimal customizations.)
     </li>
     <li><a href="https://github.com/jdholwick/affirmations" target="_blank">Affirmations App</a> (Made via tutorials
