Added notes app.

--- a/Pages/Projects.html
+++ b/Pages/Projects.html
@@ -25,7 +25,7 @@
 
 <h2>Android/Kotlin Applications:</h2>
 <ul>
-    <li><a href="https://github.com/jdholwick/the-everything-bagel-app.git" target="_blank">Simple Note-Taking App</a>
+    <li><a href="https://github.com/jdholwick/the-everything-bagel-app.git" target="_blank">Simple Note-Taking App</a> (FINAL PROJECT FOR MOBILE APP DEV CSCI 391)
     <li><a href="https://github.com/jdholwick/tiptime_app" target="_blank">Tip Calculator App</a> (Made via tutorials with
         my own minimal customizations.)
     </li>
